--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-particles-js": "^3.5.3",
+    "react-responsive-carousel": "^3.2.21",
     "react-scripts": "^4.0.3",
     "react-tinder-card": "^1.4.0",
     "react-tsparticles": "^1.34.1",
