--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-particles-js": "^3.5.3",
     "react-responsive-carousel": "^3.2.21",
     "react-scripts": "^4.0.3",
+    "react-scroll": "^1.8.4",
+    "react-share-social": "^0.1.48",
     "react-tinder-card": "^1.4.0",
     "react-tsparticles": "^1.34.1",
     "react-typed": "^1.2.0",
