--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "baseui": "^10.1.1",
     "bootstrap": "^5.1.1",
     "emailjs-com": "^3.2.0",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.15.3",
