--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "baseui": "^10.1.1",
     "bootstrap": "^5.1.1",
     "emailjs-com": "^3.2.0",
-    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.15.3",
@@ -54,5 +53,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
